Added support for Excel master/secondary extracts

--- a/MyDeptApp/20161229/extract.cfg
+++ b/MyDeptApp/20161229/extract.cfg
@@ -6,7 +6,7 @@
 # The following variables need to be defined for the secondary extract
 # The secondary PMI file name and the number of columns in this CSV file
 [secondaryFile]
-secondaryFileName=mkAltPMIsecondary.csv
+secondaryFileName=mkAltPMIsecondary.xlsx
 secondaryFieldCount=26
 
 
