--- a/MyPAS/20161229/extract.cfg
+++ b/MyPAS/20161229/extract.cfg
@@ -5,7 +5,7 @@
 # The following variables need to be defined for the master extract
 # The master PMI file name and the number of columns in this CSV file
 [masterFile]
-masterFileName=mkPMImaster.csv
+masterFileName=mkPMImaster.xlsx
 masterFieldCount=25
 
 
